# beyond-protocol

./: .codeclimate.yml  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: BeyondProtocolConfig.cmake.in  FindURIParser.cmake  ftl_CPack.cmake  ftl_abseil.cmake  ftl_paths.cmake  ftl_tracy.cmake
docs/: doxygen.conf
examples/: CMakeLists.txt
examples/create-network-stream/: main.cpp
examples/decode-h264/: main.cpp
examples/open-network-stream/: main.cpp
examples/read-ftl-file/: main.cpp
include/ftl/: counter.hpp  exception.hpp  handle.hpp  profiler.hpp  protocol.hpp  threads.hpp  time.hpp  uri.hpp  uuid.hpp
include/ftl/codec/: data.hpp  golomb.hpp  h264.hpp  msgpack.hpp  rawmat.hpp
include/ftl/data/: camera.hpp  capabilities.hpp
include/ftl/lib/: ctpl_stl.hpp  span.hpp
include/ftl/protocol/: broadcaster.hpp  channelSet.hpp  channelUtils.hpp  channels.hpp  codecs.hpp  config.h  config.h.in  error.hpp  frameid.hpp  interceptor.hpp  muxer.hpp  node.hpp  packet.hpp  self.hpp  service.hpp  streams.hpp
include/ftl/utility/: base64.hpp  vectorbuffer.hpp
src/: base64.cpp  channelSet.cpp  channelUtils.cpp  common.hpp  common_fwd.hpp  config.cpp  config.cpp.in  ctpl_stl.cpp  dispatcher.cpp  dispatcher.hpp  exception.cpp  func_traits.hpp  handlers.hpp  loguru.cpp  node.cpp  peer.cpp  peer.hpp  peer_tcp.cpp  peer_tcp.hpp  protocol.cpp  protocol.hpp  rpc.cpp  rpc.hpp  self.cpp  service.cpp  socket.hpp  socketImpl.hpp  time.cpp  universe.cpp  universe.hpp  uri.cpp  uuidMSGPACK.hpp
src/codecs/: data.cpp  golomb.cpp  h264.cpp
src/common/: profiler.cpp
src/protocol/: connection.cpp  connection.hpp  factory.cpp  tcp.cpp  tcp.hpp  tls.cpp  tls.hpp  websocket.cpp  websocket.hpp
src/quic/: CMakeLists.txt
src/quic/src/: openssl_util.cpp  openssl_util.hpp  proxy.cpp  proxy.hpp  quic.hpp  quic_peer.cpp  quic_peer.hpp  quic_universe.cpp  quic_universe.hpp  quic_universe_impl.hpp  quic_websocket.cpp  websocket.hpp
src/quic/src/msquic/: connection.cpp  connection.hpp  msquichelper.hpp  quic.cpp  quic.hpp  stream.cpp  stream.hpp
src/rpc/: time.cpp  time.hpp
src/socket/: socket.cpp  socket_linux.cpp  socket_windows.cpp  types.hpp
src/streams/: broadcaster.cpp  filestream.cpp  filestream.hpp  muxer.cpp  netstream.cpp  netstream.hpp  packetMsgpack.hpp  packetmanager.cpp  packetmanager.hpp  streams.cpp
test/: CMakeLists.txt  broadcast_unit.cpp  datacodec.cpp  filestream_unit.cpp  handle_unit.cpp  muxer_unit.cpp  net_integration.cpp  net_performance.cpp  netstream_unit.cpp  packetmanager_unit.cpp  peer_api_unit.cpp  peer_unit.cpp  rpc_integration.cpp  socket_mock.cpp  stream_integration.cpp  stream_performance.cpp  stream_unit.cpp  tests.cpp  tests_ftl.cpp  utils_unit.cpp  webservice_e2e.cpp
test/mocks/: connection.cpp  connection.hpp
test/quic/: CMakeLists.txt  quic_api.cpp  quic_peer_test.cpp  websocket_frame_unit.cpp
